update to julia 1.x

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,13 @@
-language: cpp
-compiler:
-  - clang
+language: julia
+os:
+  - linux
+  - osx
+julia:
+  - 1.4
+  - nightly
 notifications:
   email: false
-env:
-  matrix: 
-    - JULIAVERSION="juliareleases" 
-    - JULIAVERSION="julianightlies" 
-before_install:
-  - sudo add-apt-repository ppa:staticfloat/julia-deps -y
-  - sudo add-apt-repository ppa:staticfloat/${JULIAVERSION} -y
-  - sudo apt-get update -qq -y
-  - sudo apt-get install libpcre3-dev julia -y
-script:
-  - julia -e 'Pkg.init(); run(`ln -s $(pwd()) $(Pkg.dir("Psychro"))`); Pkg.pin("Psychro"); Pkg.resolve()'
-  - julia -e 'using Psychro; @assert isdefined(:Psychro); @assert typeof(Psychro) === Module'
+jobs:
+  allow_failures:
+    - julia: nightly
+  fast_finish: true
